# skript

./: .gitignore  LICENSE  README.md
porttelefon-navnegenerator/: README.md  generate_intercom_pdf.py  intercom_sample.csv  pyproject.toml
porttelefon-navnegenerator-web/: index.html
